--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=Yoshifumi-Kitagawa-2_NAIST_INTERNSHIP_CI-CD
 sonar.organization=yoshifumi-kitagawa-2
+sonar.python.coverage.reportPaths=coverage.xml
 sonar.executions=venv/**
 
 # This is the name and version displayed in the SonarCloud UI.
