--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,5 @@ commands =
     coverage xml
 [coverage:run]
 rerative_files = True
-source = NAIST_lecture_CI_CD
+source = ./NAIST_lecture_CI_CD/
 branch = True
