--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,6 @@ commands =
     coverage run -m unittest
     coverage xml
 [coverage:run]
-rerative_files = True
+relative_files = True
 source = ./NAIST_lecture_CI_CD/
 branch = True
