--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=Yutaro-Kashiwa_NAIST_INTERNSHIP_CI-CD
 sonar.organization=yutaro-kashiwa
 sonar.python.coverage.reportPaths=coverage.xml
-sonar.executions=venv/**
+#sonar.executions=venv/**
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=NAIST_INTERNSHIP_CI-CD
