--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,7 @@ commands =
     coverage xml
 [coverage:run]
 relative_files = True
-source = naist_lecture/
+source =
+    naist_lecture
+    tests
 branch = True
